# ModularFastAPI

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
modular-fastapi/lib/: __init__.py
modular-fastapi/lib/sample-package/: pyproject.toml
modular-fastapi/plugin_handler/models/: plugin_handler.py
src/lib/: __init__.py
src/lib/sample_package/routers/: sample_router.py
src/routers/: __init__.py
